# advent-of-code-2022

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
aoc_proc_macros/: Cargo.toml
aoc_proc_macros/src/: lib.rs
aom/: Cargo.toml
aom/src/: lib.rs
inputs/: day0_scratchpad.txt  day10_scratchpad.txt  day14_scratchpad.txt  day5_scratchpad.txt
src/: cli.rs  consts.rs  lib.rs
