[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aoc_lib"

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

# https://doc.rust-lang.org/cargo/reference/profiles.html#custom-profiles
[profile.release-strip]
inherits = "release"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[dependencies]
aom = { path = "./aom" }

# beef = { version = "0.5.2" }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
unstd = "0.1.0"
yyid = "0.6.0"
