[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aoc_lib"

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
panic = "abort"

# https://doc.rust-lang.org/cargo/reference/profiles.html#custom-profiles
[profile.release-strip]
inherits = "release"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[dependencies]
ahash = { version = "0.8.2", features = ["compile-time-rng"] }
aom = { path = "./aom" }

beef = { version = "0.5.2" }
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
compact_str = "0.6.1"
fs-err = { version = "2.9.0", features = ["io_safety"] }
include_dir = "0.7.3"
pathfinding = "4.0.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "trust-dns", "blocking", "cookie_store", "cookies", "gzip"] }
rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_json = "1.0.89"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }
unstd = "0.1.0"
yyid = "0.7.0"
